Use HTML Tidy to clean up HTML files in Vienna Help

--- a/Vienna Help/Resources/es.lproj/keyboard.html
+++ b/Vienna Help/Resources/es.lproj/keyboard.html
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content=
-  "text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Funciones rápidas de teclado</title>
-  <link rel="stylesheet" href="../shared/helpstyle.css" type="text/css" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a name="KeyboardSection"></a>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt=
-  "" />&nbsp;&nbsp;</span><span class="header">Funciones rápidas de
-  teclado</span>
-  <p>Puede utilizar su teclado para llevar a cabo rápidamente
-  muchas acciones en Vienna. Para encontrar las combinaciones de
-  teclas para las acciones más frecuentes, consulte en los menús o
-  bien desplácese hacia el final de esta página. Recuerde que
-  muchos ítems en Vienna disponen de menú contextual. Para acceder
-  a ellos, pulse la tecla Control y haga clic sobre el ítem
-  seleccionado.</p>
-  <p>Para llevar a cabo una acción, pulse las siguientes
-  combinaciones de teclado.</p>
-  <table width="662" border="0" cellspacing="0" id="table1"
-  cellpadding="8">
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Funciones rápidas de teclado</span>
+  <p>Puede utilizar su teclado para llevar a cabo rápidamente muchas acciones en Vienna. Para encontrar las combinaciones de teclas para las acciones más frecuentes, consulte en los menús o bien desplácese hacia el final de esta página. Recuerde que muchos ítems en Vienna disponen de menú contextual. Para acceder a ellos, pulse la tecla Control y haga clic sobre el ítem seleccionado.</p>
+  <p>Para llevar a cabo una acción, pulse las siguientes combinaciones de teclado.</p>
+  <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
       <td width="215" class="greyed"><b>Tecla</b></td>
       <td width="462" class="greyed"><b>Acción</b></td>
@@ -43,9 +32,7 @@
     </tr>
     <tr>
       <td>s</td>
-      <td>Marca todo el contenido de la carpeta seleccionada como
-      leído y salta a la siguiente carpeta con artículos no
-      leídos.</td>
+      <td>Marca todo el contenido de la carpeta seleccionada como leído y salta a la siguiente carpeta con artículos no leídos.</td>
     </tr>
     <tr>
       <td>k</td>
@@ -65,9 +52,7 @@
     </tr>
     <tr>
       <td>Barra espaciadora</td>
-      <td>Muestra el siguiente artículo no leído. En el caso de que
-      el artículo seleccionado disponga de más de una página, se
-      mostrará la siguiente página del artículo.</td>
+      <td>Muestra el siguiente artículo no leído. En el caso de que el artículo seleccionado disponga de más de una página, se mostrará la siguiente página del artículo.</td>
     </tr>
     <tr>
       <td>Comando-U</td>
@@ -79,13 +64,10 @@
     </tr>
     <tr>
       <td>Suprimir</td>
-      <td>Envía el artículo seleccionado a la papelera. Si esta
-      función se utiliza dentro de la papelera, el artículo se
-      eliminará de manera permantente.</td>
+      <td>Envía el artículo seleccionado a la papelera. Si esta función se utiliza dentro de la papelera, el artículo se eliminará de manera permantente.</td>
     </tr>
     <tr>
-      <td width="200"><b>Funciones rápidas de teclado
-      generales</b></td>
+      <td width="200"><b>Funciones rápidas de teclado generales</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -98,8 +80,7 @@
     </tr>
     <tr>
       <td>Shift-Comando-E</td>
-      <td>Edita la dirección URL de la suscripción seleccionada o
-      los criterios de una carpeta inteligente.</td>
+      <td>Edita la dirección URL de la suscripción seleccionada o los criterios de una carpeta inteligente.</td>
     </tr>
     <tr>
       <td>Shift-Comando-D</td>
@@ -115,13 +96,11 @@
     </tr>
     <tr>
       <td>Shift-Comando-R</td>
-      <td>Actualiza únicamente las suscripciones
-      seleccionadas.</td>
+      <td>Actualiza únicamente las suscripciones seleccionadas.</td>
     </tr>
     <tr>
       <td>Comando-Minus</td>
-      <td>Cancela cualquier actualización que se esté
-      produciendo.</td>
+      <td>Cancela cualquier actualización que se esté produciendo.</td>
     </tr>
     <tr>
       <td>Comando-P</td>
@@ -151,29 +130,25 @@
       <td>Shift-Comando-U</td>
       <td>Marca como leídos los artículos seleccionados.</td>
     </tr>
-	<tr>
-		<td>Command-Y</td>
-		<td>Opens the article list tab.</td>
-	</tr>
+    <tr>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
+    </tr>
     <tr>
       <td>Shift-Comando-S</td>
-      <td>Marca como leída la carpeta seleccionada y se desplaza a
-      la siguiente carpeta con artículos no leídos.</td>
+      <td>Marca como leída la carpeta seleccionada y se desplaza a la siguiente carpeta con artículos no leídos.</td>
     </tr>
     <tr>
       <td>Shift-Comando-O</td>
-      <td>Restaura un artículo desde la papelera a su carpeta
-      original.</td>
+      <td>Restaura un artículo desde la papelera a su carpeta original.</td>
     </tr>
     <tr>
       <td>Shift-Comando-K</td>
-      <td>Marca como leídos todos los artículos de las carpetas
-      seleccionadas.</td>
+      <td>Marca como leídos todos los artículos de las carpetas seleccionadas.</td>
     </tr>
     <tr>
       <td>Alt-Comando-K</td>
-      <td>Marca como leídos todos los artículos de todas las
-      carpetas.</td>
+      <td>Marca como leídos todos los artículos de todas las carpetas.</td>
     </tr>
     <tr>
       <td><b>Funciones rápidas de teclado para ventanas</b></td>
@@ -181,15 +156,11 @@
     </tr>
     <tr>
       <td>Comando-W</td>
-      <td>Cierra la página activa en el caso de que haya alguna. De
-      no haber ninguna, cierra la propia ventana principal de
-      Vienna.</td>
+      <td>Cierra la página activa en el caso de que haya alguna. De no haber ninguna, cierra la propia ventana principal de Vienna.</td>
     </tr>
     <tr>
       <td>Alt-Comando-W</td>
-      <td>Cierra todas las pestañas. Tenga en cuenta que que esta
-      acción sustituye al comamndo Cerrar pestaña del menú
-      Archivo.</td>
+      <td>Cierra todas las pestañas. Tenga en cuenta que que esta acción sustituye al comamndo Cerrar pestaña del menú Archivo.</td>
     </tr>
     <tr>
       <td>Control-Comando-Izquierda</td>
@@ -201,10 +172,7 @@
     </tr>
     <tr>
       <td>Shift-Comando-W</td>
-      <td>Cierra la pantalla principal de Vienna pero deja a la
-      aplicación ejecutándose en segundo plano. Puede acceder de
-      nuevo a la ventana principal haciendo clic en el icono de
-      Vienna o pulsando Comando-1.</td>
+      <td>Cierra la pantalla principal de Vienna pero deja a la aplicación ejecutándose en segundo plano. Puede acceder de nuevo a la ventana principal haciendo clic en el icono de Vienna o pulsando Comando-1.</td>
     </tr>
     <tr>
       <td>Comando-M</td>
@@ -244,14 +212,11 @@
     </tr>
     <tr>
       <td>Comando-F</td>
-      <td>Desplaza el cursor al cajón de búsqueda. Escriba alguna
-      palabra y/o texto, pulse la tecla Aceptar y Vienna buscará en
-      la página web seleccionada su solicitud.</td>
+      <td>Desplaza el cursor al cajón de búsqueda. Escriba alguna palabra y/o texto, pulse la tecla Aceptar y Vienna buscará en la página web seleccionada su solicitud.</td>
     </tr>
     <tr>
       <td>Comando-G</td>
-      <td>Busca la siguiente acepción del cajón de búsqueda en la
-      página web.</td>
+      <td>Busca la siguiente acepción del cajón de búsqueda en la página web.</td>
     </tr>
   </table>
 </body>
