--- a/Vienna Help/Resources/nl.lproj/Vienna.html
+++ b/Vienna Help/Resources/nl.lproj/Vienna.html
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content=
-  "text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="AppleTitle" content="Vienna Help" />
-  <link rel="stylesheet" href="../shared/helpstyle.css" type="text/css" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
   <title>Vienna Help</title>
 </head>
 <body>
@@ -13,22 +13,17 @@
     <tbody>
       <tr>
         <td width="130">
-          <p align="center"><img src="../shared/images/Vienna-Logo.png"
-          height="128" width="128" alt="" /></p>
+          <p align="center"><img src="../shared/images/Vienna-Logo.png" height="128" width="128" alt="" /></p>
           <p class="title" align="center">Vienna Help</p>
         </td>
-        <td width="42"><img src="../shared/images/Vertical-Line.png" height=
-        "270" width="36" alt="" /></td>
+        <td width="42"><img src="../shared/images/Vertical-Line.png" height="270" width="36" alt="" /></td>
         <td width="300">
           <p class="header">Inleiding voor Vienna</p>
-          <p><a href="intro.html">De eerste stappen met
-          Vienna.</a></p>
+          <p><a href="intro.html">De eerste stappen met Vienna.</a></p>
           <p class="header">Toetscombinaties</p>
-          <p><a href="keyboard.html">Ontdek toetscombinaties voor
-          veelgebruikte commando's</a></p>
+          <p><a href="keyboard.html">Ontdek toetscombinaties voor veelgebruikte commando's</a></p>
           <p class="header">Hoe kan ik?</p>
-          <p><a href="faq.html">Veelgestelde vragen, ondersteuning
-          verkrijgen en problemen oplossen.</a></p>
+          <p><a href="faq.html">Veelgestelde vragen, ondersteuning verkrijgen en problemen oplossen.</a></p>
         </td>
       </tr>
     </tbody>
