--- a/Vienna Help/Resources/da.lproj/Vienna.html
+++ b/Vienna Help/Resources/da.lproj/Vienna.html
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="AppleTitle" content="Vienna Help"/>
-  <link rel="stylesheet" href="../shared/helpstyle.css" type="text/css"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="AppleTitle" content="Vienna Help" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
   <title>Vienna hjælp</title>
 </head>
 <body>
-<table border="0" cellspacing="10" width="100%">
-  <tbody>
-    <tr>
-      <td width="130">
-		<p align="center"><img src="../shared/images/Vienna-Logo.png" height="128" width="128" alt=""/></p>
-		<p class="title" align="center">Vienna hjælp</p>
-      </td>
-      <td width="42">
-		<img src="../shared/images/Vertical-Line.png" height="270" width="36" alt=""/>
-      </td>
-      <td width="300">
-		<p class="header">Introduktion til Vienna</p>
-		<p><a href="intro.html">Lær hvordan du starter med Vienna.</a></p>
-
-		<p class="header">Tastaturgenveje</p>
-		<p><a href="keyboard.html">Opdag tastaturgenveje for ofte brubte kommandoer</a></p>
-
-		<p class="header">Hvordan gør jeg?</p>
-		<p><a href="faq.html">Ofte stillede spørgsmål, få support og fejlsøgning</a></p>
-
-		<p class="header">Avancerede indstillinger</p>
-		<p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <table border="0" cellspacing="10" width="100%">
+    <tbody>
+      <tr>
+        <td width="130">
+          <p align="center"><img src="../shared/images/Vienna-Logo.png" height="128" width="128" alt="" /></p>
+          <p class="title" align="center">Vienna hjælp</p>
+        </td>
+        <td width="42"><img src="../shared/images/Vertical-Line.png" height="270" width="36" alt="" /></td>
+        <td width="300">
+          <p class="header">Introduktion til Vienna</p>
+          <p><a href="intro.html">Lær hvordan du starter med Vienna.</a></p>
+          <p class="header">Tastaturgenveje</p>
+          <p><a href="keyboard.html">Opdag tastaturgenveje for ofte brubte kommandoer</a></p>
+          <p class="header">Hvordan gør jeg?</p>
+          <p><a href="faq.html">Ofte stillede spørgsmål, få support og fejlsøgning</a></p>
+          <p class="header">Avancerede indstillinger</p>
+          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
