--- a/Vienna Help/Resources/de.lproj/faq.html
+++ b/Vienna Help/Resources/de.lproj/faq.html
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>Was tun?</title>
-	<link rel="stylesheet" href="../shared/../shared/helpstyle.css" type="text/css"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Was tun?</title>
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<p>Schauen Sie auf der <a href="https://www.vienna-rss.com/faq">offizelle Vienna Hilfe Seite</a> für die neusten Tipps und Tricks nach.</p>
+  <p>Schauen Sie auf der <a href="https://www.vienna-rss.com/faq">offizelle Vienna Hilfe Seite</a> für die neusten Tipps und Tricks nach.</p>
 </body>
 </html>
