--- a/Vienna Help/Resources/fr.lproj/Vienna.html
+++ b/Vienna Help/Resources/fr.lproj/Vienna.html
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content=
-  "text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="AppleTitle" content="Vienna Help" />
-  <link rel="stylesheet" href="../shared/helpstyle.css" media="all" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
   <title>Aide Vienna</title>
 </head>
 <body>
@@ -13,25 +13,19 @@
     <tbody>
       <tr>
         <td width="130">
-          <p align="center"><img src="../shared/images/Vienna-Logo.png"
-          height="128" width="128" alt="" /></p>
+          <p align="center"><img src="../shared/images/Vienna-Logo.png" height="128" width="128" alt="" /></p>
           <p class="title" align="center">Aide Vienna</p>
         </td>
-        <td width="42"><img src="../shared/images/Vertical-Line.png" height=
-        "270" width="36" alt="" /></td>
+        <td width="42"><img src="../shared/images/Vertical-Line.png" height="270" width="36" alt="" /></td>
         <td width="300">
           <p class="header">Introduction à Vienna</p>
-          <p><a href="intro.html">Apprendre comment débuter avec
-          Vienna.</a></p>
+          <p><a href="intro.html">Apprendre comment débuter avec Vienna.</a></p>
           <p class="header">Raccourcis clavier</p>
-          <p><a href="keyboard.html">Découvrir les raccourcis
-          clavier pour les commandes courantes</a></p>
+          <p><a href="keyboard.html">Découvrir les raccourcis clavier pour les commandes courantes</a></p>
           <p class="header">Comment faire ?</p>
-          <p><a href="faq.html">Questions fréquemment posées,
-          obtenir du support, étapes de dépannage.</a></p>
+          <p><a href="faq.html">Questions fréquemment posées, obtenir du support, étapes de dépannage.</a></p>
           <p class="header">Réglages avancés</p>
-          <p><a href="advanced.html">Explications des réglages de
-          l'onglet Advancés des Préférences.</a></p>
+          <p><a href="advanced.html">Explications des réglages de l'onglet Advancés des Préférences.</a></p>
         </td>
       </tr>
     </tbody>
