--- a/Vienna Help/Resources/it.lproj/keyboard.html
+++ b/Vienna Help/Resources/it.lproj/keyboard.html
@@ -3,27 +3,15 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content=
-  "text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Abbreviazioni da Tastiera</title>
-  <link rel="stylesheet" href="../shared/helpstyle.css" type="text/css" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a name="KeyboardSection"></a>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt=
-  "" />&nbsp;&nbsp;</span><span class="header">Abbreviazioni da
-  Tastiera</span>
-  <p>Puoi usare la tua tastiera per eseguire rapidamente diverse
-  operazioni in Vienna. Per trovare le abbreviazioni per i comandi
-  comuni, guarda nei menu (o vedi la lista in fondo a questa
-  pagina). Molti elementi di Vienna come l'area cartella e l'elenco
-  degli articoli hanno anche dei menu contestuali. Per vedere un
-  menu contestuale, premi il tasto Control e fai clic
-  sull'elemento.</p>
-  <p>Per eseguire un'azione, premi i tasti di abbreviazione sotto
-  indicati.</p>
-  <table width="662" border="0" cellspacing="0" id="table1"
-  cellpadding="8">
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Abbreviazioni da Tastiera</span>
+  <p>Puoi usare la tua tastiera per eseguire rapidamente diverse operazioni in Vienna. Per trovare le abbreviazioni per i comandi comuni, guarda nei menu (o vedi la lista in fondo a questa pagina). Molti elementi di Vienna come l'area cartella e l'elenco degli articoli hanno anche dei menu contestuali. Per vedere un menu contestuale, premi il tasto Control e fai clic sull'elemento.</p>
+  <p>Per eseguire un'azione, premi i tasti di abbreviazione sotto indicati.</p>
+  <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
       <td width="215" class="greyed"><b>Tasto</b></td>
       <td width="462" class="greyed"><b>Azione</b></td>
@@ -36,8 +24,7 @@
     </tr>
     <tr>
       <td width="115">f</td>
-      <td>Imposta il focus dell'input sulla finestra di
-      ricerca.</td>
+      <td>Imposta il focus dell'input sulla finestra di ricerca.</td>
     </tr>
     <tr>
       <td>r</td>
@@ -45,8 +32,7 @@
     </tr>
     <tr>
       <td>s</td>
-      <td>Segnala la cartella corrente come letta poi passa alla
-      cartella successiva con articoli non letti.</td>
+      <td>Segnala la cartella corrente come letta poi passa alla cartella successiva con articoli non letti.</td>
     </tr>
     <tr>
       <td>k</td>
@@ -62,35 +48,27 @@
     </tr>
     <tr>
       <td>&gt;</td>
-      <td>Mostra l'articolo o pagina web vista
-      successivamente.</td>
+      <td>Mostra l'articolo o pagina web vista successivamente.</td>
     </tr>
     <tr>
       <td>Spacebar</td>
-      <td>Va all'articolo successivo non letto a meno che
-      l'articolo corrente non abbia altro testo da scorrere ed in
-      tal caso va su di una pagina all'interno dell'articolo
-      corrente.</td>
+      <td>Va all'articolo successivo non letto a meno che l'articolo corrente non abbia altro testo da scorrere ed in tal caso va su di una pagina all'interno dell'articolo corrente.</td>
     </tr>
     <tr>
       <td>Comando-U</td>
       <td>Va all'articolo successivo non letto.</td>
     </tr>
-	<tr>
-		<td>Command-Y</td>
-		<td>Opens the article list tab.</td>
-	</tr>
+    <tr>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
+    </tr>
     <tr>
       <td>Enter/Return</td>
-      <td>Apre l'articolo selezionato nella pagina web
-      originale.</td>
+      <td>Apre l'articolo selezionato nella pagina web originale.</td>
     </tr>
     <tr>
       <td>Delete/Backspace</td>
-      <td>Sposta gli articoli selezionati nella cartella Cestino.
-      Se questo tasto viene utilizzato nella cartella Cestino, gli
-      articoli selezionati saranno eliminati in modo
-      permanente.</td>
+      <td>Sposta gli articoli selezionati nella cartella Cestino. Se questo tasto viene utilizzato nella cartella Cestino, gli articoli selezionati saranno eliminati in modo permanente.</td>
     </tr>
     <tr>
       <td width="200"><b>Abbreviazioni Generali</b></td>
@@ -106,8 +84,7 @@
     </tr>
     <tr>
       <td>Shift-Comando-E</td>
-      <td>Modifica la URL della cartella selezionata o modifica il
-      criterio di una cartella smart.</td>
+      <td>Modifica la URL della cartella selezionata o modifica il criterio di una cartella smart.</td>
     </tr>
     <tr>
       <td>Shift-Comando-D</td>
@@ -123,8 +100,7 @@
     </tr>
     <tr>
       <td>Shift-Comando-R</td>
-      <td>Aggiorna solo quelle iscrizioni che siano selezionate
-      nell'elenco cartelle.</td>
+      <td>Aggiorna solo quelle iscrizioni che siano selezionate nell'elenco cartelle.</td>
     </tr>
     <tr>
       <td>Comando-Meno</td>
@@ -160,23 +136,19 @@
     </tr>
     <tr>
       <td>Shift-Comando-S</td>
-      <td>Segnala la cartella corrente come letta poi passa alla
-      cartella successiva con articoli non letti.</td>
+      <td>Segnala la cartella corrente come letta poi passa alla cartella successiva con articoli non letti.</td>
     </tr>
     <tr>
       <td>Shift-Comando-O</td>
-      <td>Ripristina un articolo dal cestino riportandolo nella sua
-      cartella originale.</td>
+      <td>Ripristina un articolo dal cestino riportandolo nella sua cartella originale.</td>
     </tr>
     <tr>
       <td>Shift-Comando-K</td>
-      <td>Segnala tutti gli articoli nelle cartelle selezionate
-      come letti.</td>
+      <td>Segnala tutti gli articoli nelle cartelle selezionate come letti.</td>
     </tr>
     <tr>
       <td>Alt-Comando-K</td>
-      <td>Segnala tutti gli articoli in tutte le cartelle come
-      letti.</td>
+      <td>Segnala tutti gli articoli in tutte le cartelle come letti.</td>
     </tr>
     <tr>
       <td><b>Abbreviazioni Finestra</b></td>
@@ -184,15 +156,11 @@
     </tr>
     <tr>
       <td>Comando-W</td>
-      <td>Chiude il pannello attivo se ce n'è uno aperto.
-      Altrimenti se non ci sono pannelli aperti, chiude la finestra
-      di Vienna.</td>
+      <td>Chiude il pannello attivo se ce n'è uno aperto. Altrimenti se non ci sono pannelli aperti, chiude la finestra di Vienna.</td>
     </tr>
     <tr>
       <td>Alt-Comando-W</td>
-      <td>Chiude tutti i pannelli. Nota che questo comando
-      sostituisce il comando Chiudi Pannello nel menu Archivio
-      quando si tiene premuto il tasto Alt.</td>
+      <td>Chiude tutti i pannelli. Nota che questo comando sostituisce il comando Chiudi Pannello nel menu Archivio quando si tiene premuto il tasto Alt.</td>
     </tr>
     <tr>
       <td>Control-Comando-Freccia Sinistra</td>
@@ -204,10 +172,7 @@
     </tr>
     <tr>
       <td>Shift-Comando-W</td>
-      <td>Chiude la finestra di Vienna ma lascia Vienna in
-      esecuzione in background. Puoi riportare la finestra in vista
-      facendo clic sull'icon nel dock di Vienna o premendo
-      Comando-1.</td>
+      <td>Chiude la finestra di Vienna ma lascia Vienna in esecuzione in background. Puoi riportare la finestra in vista facendo clic sull'icon nel dock di Vienna o premendo Comando-1.</td>
     </tr>
     <tr>
       <td>Comando-M</td>
@@ -215,13 +180,11 @@
     </tr>
     <tr>
       <td>Comando-0</td>
-      <td>Visualizza la finestra con il visore resoconto
-      attività.</td>
+      <td>Visualizza la finestra con il visore resoconto attività.</td>
     </tr>
     <tr>
       <td>Comando-1</td>
-      <td>Riapre la finestra di Vienna se era stata chiusa
-      precedentemente.</td>
+      <td>Riapre la finestra di Vienna se era stata chiusa precedentemente.</td>
     </tr>
     <tr>
       <td>Comando-2</td>
@@ -249,14 +212,11 @@
     </tr>
     <tr>
       <td>Comando-F</td>
-      <td>Imposta il focus sul campo di ricerca. Inserendo del
-      testo qui e premendo Enter, il programma cercherà quel testo
-      nella pagina web corrente.</td>
+      <td>Imposta il focus sul campo di ricerca. Inserendo del testo qui e premendo Enter, il programma cercherà quel testo nella pagina web corrente.</td>
     </tr>
     <tr>
       <td>Comando-G</td>
-      <td>Ricerca la prossima occorrenza del testo cercato nella
-      pagina web.</td>
+      <td>Ricerca la prossima occorrenza del testo cercato nella pagina web.</td>
     </tr>
   </table>
 </body>
