--- a/Vienna Help/Resources/nl.lproj/keyboard.html
+++ b/Vienna Help/Resources/nl.lproj/keyboard.html
@@ -1,31 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="content-type" content=
-  "text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Keyboard Shortcuts</title>
-  <link rel="stylesheet" href="../shared/helpstyle.css" type="text/css" />
+  <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<a name="KeyboardSection"></a>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt=
-  "" />&nbsp;&nbsp;</span><span class=
-  "header">Toetscombinaties</span>
-  <p>U kunt met uw toetsenbord snel veel taken uitvoeren in Vienna.
-  U vindt de combinaties door in de menus te kijken en in de
-  onderstaande lijst. Vele items in Vienna hebben ook een
-  contextueel menu. Om een contextueel menu te openen klikt u op
-  een item terwijl u de Control toets ingedrukt houd.</p>
-  <p>Om een commando uit te voeren, druk de onderstaande toetsen
-  in.</p>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Toetscombinaties</span>
+  <p>U kunt met uw toetsenbord snel veel taken uitvoeren in Vienna. U vindt de combinaties door in de menus te kijken en in de onderstaande lijst. Vele items in Vienna hebben ook een contextueel menu. Om een contextueel menu te openen klikt u op een item terwijl u de Control toets ingedrukt houd.</p>
+  <p>Om een commando uit te voeren, druk de onderstaande toetsen in.</p>
   <p><b>Toets legenda</b></p>
-  <p>⌦&nbsp;=&nbsp;Delete, ⌫&nbsp;=&nbsp;Backspace,
-  ⌅&nbsp;=&nbsp;Enter, ↩&nbsp;=&nbsp;Return, ⌥&nbsp;=&nbsp;Alt,
-  ⇧&nbsp;=&nbsp;Shift, ⌘&nbsp;=&nbsp;Command,
-  ⌃&nbsp;=&nbsp;Control</p>
-  <table width="662" border="0" cellspacing="0" id="table1"
-  cellpadding="8">
+  <p>⌦&nbsp;=&nbsp;Delete, ⌫&nbsp;=&nbsp;Backspace, ⌅&nbsp;=&nbsp;Enter, ↩&nbsp;=&nbsp;Return, ⌥&nbsp;=&nbsp;Alt, ⇧&nbsp;=&nbsp;Shift, ⌘&nbsp;=&nbsp;Command, ⌃&nbsp;=&nbsp;Control</p>
+  <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
       <td width="200" class="greyed"><b>Toets(en)</b></td>
       <td width="462" class="greyed"><b>Actie</b></td>
@@ -54,8 +42,7 @@
     </tr>
     <tr>
       <td>m</td>
-      <td>Schakel de geselecteerde artikelen tussen ⚑ markering aan
-      of uit.</td>
+      <td>Schakel de geselecteerde artikelen tussen ⚑ markering aan of uit.</td>
     </tr>
     <tr>
       <td>n</td>
@@ -63,18 +50,15 @@
     </tr>
     <tr>
       <td>r</td>
-      <td>Schakel de geselecteerde artikelen tussen gelezen en
-      ongelezen.</td>
+      <td>Schakel de geselecteerde artikelen tussen gelezen en ongelezen.</td>
     </tr>
     <tr>
       <td>u</td>
-      <td>Schakel de geselecteerde artikelen tussen gelezen en
-      ongelezen.</td>
+      <td>Schakel de geselecteerde artikelen tussen gelezen en ongelezen.</td>
     </tr>
     <tr>
       <td>s</td>
-      <td>Markeer de huidige map als gelezen en springt naar de
-      volgende map met ongelezen artikelen.</td>
+      <td>Markeer de huidige map als gelezen en springt naar de volgende map met ongelezen artikelen.</td>
     </tr>
     <tr>
       <td>&lt;&nbsp;&nbsp;of&nbsp;&nbsp;,</td>
@@ -86,9 +70,7 @@
     </tr>
     <tr>
       <td>Spatiebalk</td>
-      <td>Ga naar het volgende ongelezen artikel, tenzij er meer
-      tekst in het huidige artikel is dan schuift de volgende
-      pagina in beeld.</td>
+      <td>Ga naar het volgende ongelezen artikel, tenzij er meer tekst in het huidige artikel is dan schuift de volgende pagina in beeld.</td>
     </tr>
     <tr>
       <td>⌅&nbsp;&nbsp;of&nbsp;&nbsp;↩</td>
@@ -96,9 +78,7 @@
     </tr>
     <tr>
       <td>⌦&nbsp;&nbsp;of&nbsp;&nbsp;⌫</td>
-      <td>Verplaats geselecteerde artikelen naar de prullenmand.
-      Als deze toets wordt gebruikt in de prullenmand, dan worden
-      de artikelen definitief verwijderd.</td>
+      <td>Verplaats geselecteerde artikelen naar de prullenmand. Als deze toets wordt gebruikt in de prullenmand, dan worden de artikelen definitief verwijderd.</td>
     </tr>
     <tr>
       <td width="200"><b>Algemeen</b></td>
@@ -106,8 +86,7 @@
     </tr>
     <tr>
       <td>⌥Klik</td>
-      <td>Open de geklikte koppeling, en negeer de
-      voorkeurinstelling voor openen in externe browser.</td>
+      <td>Open de geklikte koppeling, en negeer de voorkeurinstelling voor openen in externe browser.</td>
     </tr>
     <tr>
       <td>⇧⌘B</td>
@@ -123,8 +102,7 @@
     </tr>
     <tr>
       <td>⇧⌘E</td>
-      <td>Bewerk de URL voor de geselecteerde map of bewerk slimme
-      map criteria.</td>
+      <td>Bewerk de URL voor de geselecteerde map of bewerk slimme map criteria.</td>
     </tr>
     <tr>
       <td>⇧⌘D</td>
@@ -132,9 +110,7 @@
     </tr>
     <tr>
       <td>⌘C</td>
-      <td>Kopieer de geselecteerde tekst naar het klembord. Als de
-      focus op een artikel ligt, dan worden de artikel details
-      gekopieerd.</td>
+      <td>Kopieer de geselecteerde tekst naar het klembord. Als de focus op een artikel ligt, dan worden de artikel details gekopieerd.</td>
     </tr>
     <tr>
       <td>⌘H</td>
@@ -150,9 +126,7 @@
     </tr>
     <tr>
       <td>⌘L</td>
-      <td>Plaats de cursor in de adresbalk van de huidige tab.
-      Indien er geen browser geopend is, dan wordt er een nieuwe
-      tab geopend en de cursor in de adresbalk geplaatst.</td>
+      <td>Plaats de cursor in de adresbalk van de huidige tab. Indien er geen browser geopend is, dan wordt er een nieuwe tab geopend en de cursor in de adresbalk geplaatst.</td>
     </tr>
     <tr>
       <td>⇧⌘N</td>
@@ -184,8 +158,7 @@
     </tr>
     <tr>
       <td>⌘T</td>
-      <td>Open een nieuwe tab en plaats de cursor in de
-      adresbalk.</td>
+      <td>Open een nieuwe tab en plaats de cursor in de adresbalk.</td>
     </tr>
     <tr>
       <td>⌘U</td>
@@ -201,13 +174,11 @@
     </tr>
     <tr>
       <td>⌘+</td>
-      <td>Maak de tekst groter in huidige artikel of
-      webpagina.</td>
+      <td>Maak de tekst groter in huidige artikel of webpagina.</td>
     </tr>
     <tr>
       <td>⌘-</td>
-      <td>Maak de tekst kleiner in huidige artikel of
-      webpagina.</td>
+      <td>Maak de tekst kleiner in huidige artikel of webpagina.</td>
     </tr>
     <tr>
       <td>⌘,</td>
@@ -219,8 +190,7 @@
     </tr>
     <tr>
       <td>⌘?</td>
-      <td>Toon het Vienna Help bestand, (Mac OS X 10.5 en later,
-      activeer de zoek functie in het Help bestand).</td>
+      <td>Toon het Vienna Help bestand, (Mac OS X 10.5 en later, activeer de zoek functie in het Help bestand).</td>
     </tr>
     <tr>
       <td><b>Artikelen</b></td>
@@ -228,8 +198,7 @@
     </tr>
     <tr>
       <td>⌥⌅&nbsp;&nbsp;of&nbsp;&nbsp;⌥↩</td>
-      <td>Open de webpagina van het artikel en negeer de
-      voorkeurinstelling voor openen in externe browser.</td>
+      <td>Open de webpagina van het artikel en negeer de voorkeurinstelling voor openen in externe browser.</td>
     </tr>
     <tr>
       <td>⇧⌘Z</td>
@@ -237,8 +206,7 @@
     </tr>
     <tr>
       <td>⇧⌘M</td>
-      <td>Markeer de geselecteerde artikelen met een ⚑ en plaatst
-      het in de map Gemarkeerde artikelen.</td>
+      <td>Markeer de geselecteerde artikelen met een ⚑ en plaatst het in de map Gemarkeerde artikelen.</td>
     </tr>
     <tr>
       <td>⇧⌘U</td>
@@ -246,23 +214,19 @@
     </tr>
     <tr>
       <td>⌥⌘S</td>
-      <td>Stuur een email met een koppeling naar het huidige
-      artikel.</td>
+      <td>Stuur een email met een koppeling naar het huidige artikel.</td>
     </tr>
     <tr>
       <td>⇧⌘S</td>
-      <td>Markeer de huidige map als gelezen en ga naar de volgende
-      map met ongelezen artikelen.</td>
+      <td>Markeer de huidige map als gelezen en ga naar de volgende map met ongelezen artikelen.</td>
     </tr>
     <tr>
       <td>⇧⌘O</td>
-      <td>Haal artikel uit prullenmand en zet terug in originele
-      map.</td>
+      <td>Haal artikel uit prullenmand en zet terug in originele map.</td>
     </tr>
     <tr>
       <td>⇧⌘K</td>
-      <td>Markeer alle artikelen in geselecteerde map als
-      gelezen.</td>
+      <td>Markeer alle artikelen in geselecteerde map als gelezen.</td>
     </tr>
     <tr>
       <td>⌥⌘K</td>
@@ -274,21 +238,15 @@
     </tr>
     <tr>
       <td>⌘W</td>
-      <td>Sluit de actieve tab als er een open is. Indien dat niet
-      het geval is, dan sluit het Vienna venster.</td>
+      <td>Sluit de actieve tab als er een open is. Indien dat niet het geval is, dan sluit het Vienna venster.</td>
     </tr>
     <tr>
       <td>⌥⌘W</td>
-      <td>Sluit alle tab vensters. Opmerking: Dit commando vervangt
-      de <b>Sluit tab</b> in het <b>Archief</b> menu als de alt (⌥)
-      toets is ingedrukt.</td>
+      <td>Sluit alle tab vensters. Opmerking: Dit commando vervangt de <b>Sluit tab</b> in het <b>Archief</b> menu als de alt (⌥) toets is ingedrukt.</td>
     </tr>
     <tr>
       <td>⇧⌘W</td>
-      <td>Sluit het Vienna venster maar laat Vienna in de
-      achtergrond werken. U kan het venster weer openen door op het
-      Vienna icoon in de Dock te klikken of door ⌘1 in te
-      toetsen.</td>
+      <td>Sluit het Vienna venster maar laat Vienna in de achtergrond werken. U kan het venster weer openen door op het Vienna icoon in de Dock te klikken of door ⌘1 in te toetsen.</td>
     </tr>
     <tr>
       <td>⌥⌘←</td>
@@ -336,14 +294,11 @@
     </tr>
     <tr>
       <td>⌘F</td>
-      <td>Activeer het zoek veld in de knoppenbalk. Voer hier tekst
-      in en druk op Enter en er wordt gezocht in de huidige
-      webpagina.</td>
+      <td>Activeer het zoek veld in de knoppenbalk. Voer hier tekst in en druk op Enter en er wordt gezocht in de huidige webpagina.</td>
     </tr>
     <tr>
       <td>⌘G</td>
-      <td>Kijk of de zoekterm voorkomt verderop in de
-      webpagina.</td>
+      <td>Kijk of de zoekterm voorkomt verderop in de webpagina.</td>
     </tr>
   </table>
 </body>
